--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,7 @@
         <module>demos/policy-security-sslsaml</module>
         <module>demos/policy-transaction</module>
         <module>camel-amqp-binding</module>
+        <module>camel-binding-transactional</module>
     </modules>
     <!-- Conditionally include the assembly module.  It's not always present e.g. in the quickstarts distro. -->
     <profiles>
